# FastAPI_blog

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0859253a25f2_initialization.py  cadd10b727cc_initialization.py  db9500e98ec0_initioalization.py
src/: app.py
src/config/: settings.py
src/database/: base.py  dependencies.py
src/database/models/: posts.py  users.py
src/routers/: posts.py  users.py
src/schemas/: posts.py  tokens.py  users.py
src/services/: login.py  posts.py  users.py  utils.py
